[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerbernetix.toolbox"
version = "0.10.0"
authors = [{ name = "Jean-Sébastien CONAN", email = "jsconan@gmail.com" }]
description = "A set of utilities for Python projects"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests>=2.31.0"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cerbernetix/py-toolbox"
"Bug Tracker" = "https://github.com/cerbernetix/py-toolbox/issues"

[project.optional-dependencies]
linting = ['pylint==2.17.5']
formatting = ['black==23.9.1']
dev = ["pylint==2.17.5"]
test = ["coverage==7.3.1"]

[tool.pylint]
max-line-length = 100
disable = [
  "R0903", # (too-few-public-methods)
  "R0913", # (too-many-arguments)
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["src"]

[tool.coverage.paths]
source = ["src"]
tests = ["tests/"]
